--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -171,6 +171,13 @@ mark {
     flex-direction: row;
 }
 
+.loading-text{
+    font-weight: 400;
+    position: absolute;
+    left: 50%;
+    translate: -50% 50px;
+}
+
 
 @media only screen and (max-width: 1260px) {
 
