--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -405,7 +405,7 @@ mark {
 }
 
 .timetable p{
-    font-family: Red Hat Display, sans-serif;
+    font-family: red-hat-display, sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: normal;
