--- a/src/styles/Partnerships.css
+++ b/src/styles/Partnerships.css
@@ -46,7 +46,7 @@
 }
 
 .visit-button p {
-    font-family: Red Hat Display, sans-serif;
+    font-family: red-hat-display, sans-serif;
     font-weight: 600;
     mix-blend-mode: difference;
 
